Updated styling to fix some layout issues in dialogs

--- a/KHost.App/ClientApp/src/app/components/dialogs/edit-singer/edit-singer.component.scss
+++ b/KHost.App/ClientApp/src/app/components/dialogs/edit-singer/edit-singer.component.scss
@@ -2,6 +2,6 @@
     display: block;
 }
 
-input {
+mat-form-field {
     display: block;
 }
