--- a/KHost.App/ClientApp/src/scss/styles.scss
+++ b/KHost.App/ClientApp/src/scss/styles.scss
@@ -248,7 +248,6 @@ mat-dialog-actions {
 }
 
 mat-form-field {
-	width: 100%;
 	padding: 0.3em;
 }
 
